# lucia_turtlebot

./: .gitlab-ci.yml  .travis.yml  README.md  Vagrantfile
lucia_gazebo_worlds/: CMakeLists.txt  README.md  package.xml
lucia_gazebo_worlds/Media/models/: ikea_kritter_chair.stl  ikea_kritter_table.stl  lucia_arena.fcstd  lucia_arena.stl
lucia_gazebo_worlds/launch/: lucia_world.launch  turtlebot_world.launch
lucia_gazebo_worlds/launch/includes/: kobuki.launch.xml  lucia_world.launch.xml
lucia_gazebo_worlds/maps/: lucia_arena.yaml  lucia_arena_only_walls.yaml
lucia_gazebo_worlds/worlds/: lucia.world
lucia_launch/: CMakeLists.txt  package.xml
lucia_launch/launch/: lucia_gazebo.launch  lucia_robot.launch  perception_laptop.launch  processing.launch  rviz.launch
lucia_launch/launch/includes/: lucia_services.launch  nbv_reachability_filter.launch  next_best_view_lucia_turtlebot.launch  object_search_manager.launch
lucia_turtlebot_bringup/: CMakeLists.txt  package.xml
lucia_turtlebot_bringup/camera_info/: depth_1205290078.yaml  depth_1503140980.yaml  depth_1503160511.yaml  depth_16042610025.yaml  rgb_1205290078.yaml  rgb_1503140980.yaml  rgb_1503160511.yaml  rgb_16042610025.yaml
lucia_turtlebot_bringup/config/: frames.yaml  frames_turtlebot1.yaml  frames_turtlebot2.yaml  frames_turtlebot3.yaml
lucia_turtlebot_bringup/launch/: frame_editor.launch  top_camera_astra.launch  top_camera_xtion.launch
lucia_turtlebot_bringup/maps/: lucia_arena_real.yaml
lucia_turtlebot_bringup/rviz/: frame_editor.rviz
lucia_turtlebot_description/: CMakeLists.txt  package.xml
lucia_turtlebot_description/launch/: test.launch  upload_turtlebot.launch
lucia_turtlebot_description/robots/: kobuki_hexagons_kinect.urdf.xacro  turtlebot1.urdf.xacro  turtlebot2.urdf.xacro  turtlebot3.urdf.xacro
lucia_turtlebot_description/urdf/: turtlebot_gazebo.urdf.xacro
lucia_turtlebot_description/urdf/sensors/: asus_xtion_pro.urdf.xacro
multi_turtlebot_navigation/: CMakeLists.txt  package.xml
multi_turtlebot_navigation/launch/: move_base_amcl.launch
multi_turtlebot_navigation/launch/includes/: amcl.launch.xml
multi_turtlebot_navigation/rviz/: robot_navigation.rviz
multibot_cloud_filter/: CMakeLists.txt  package.xml
multibot_cloud_filter/src/: multibot_cloud_filter.cpp
