<package>
  <name>lucia_gazebo_worlds</name>
  <version>1.0.0</version>
  <description>Gazebo world, model and launch files for Lucia winter school 2016.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.informatik.uni-osnabrueck.de/lucia2016/lucia_turtlebot</url>
  <url type="repository">https://gitlab.informatik.uni-osnabrueck.de/lucia2016/lucia_turtlebot.git</url>
  <url type="bugtracker">https://gitlab.informatik.uni-osnabrueck.de/lucia2016/lucia_turtlebot/issues</url>

  <author email="martin.guenther@dfki.de">Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>

  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>lucia_turtlebot_description</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
