<?xml version="1.0"?>
<package>
  <name>lucia_turtlebot_description</name>
  <version>1.0.0</version>
  <description>URDF description for the modified Turtlebots used in the Lucia school (with second Xtion)</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.informatik.uni-osnabrueck.de/lucia2016/lucia_turtlebot</url>
  <url type="repository">https://gitlab.informatik.uni-osnabrueck.de/lucia2016/lucia_turtlebot.git</url>
  <url type="bugtracker">https://gitlab.informatik.uni-osnabrueck.de/lucia2016/lucia_turtlebot/issues</url>

  <author email="martin.guenther@dfki.de">Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>turtlebot_description</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>turtlebot_description</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
