<package>
  <name>multi_turtlebot_navigation</name>
  <version>1.0.0</version>
  <description>Launch files to bring up navigation (move_base, amcl) on multiple turtlebots.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/uos/lucia_turtlebot</url>
  <url type="repository">https://github.com/uos/lucia_turtlebot.git</url>
  <url type="bugtracker">https://github.com/uos/lucia_turtlebot/issues</url>

  <author email="martin.guenther@dfki.de">Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
